--- a/package.json
+++ b/package.json
@@ -49,5 +49,10 @@
   },
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/criol/storybook-addon-multi-theme/issues"
+  },
+  "homepage": "https://github.com/criol/storybook-addon-multi-theme#readme",
+  "author": "Gobedashvili Bagrat"
 }
