Update storybook-addon-multi-theme package.json for addon-catalog

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "keywords": [
     "addon",
     "storybook",
-    "theme"
+    "theme",
+    "storybook-addon",
+    "style"
   ],
   "license": "MIT",
   "main": "dist/index.js",
